lib/src/jpeg_encode_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/jpeg_encode_ffi.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class JpegEncodeFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  JpegEncodeFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  JpegEncodeFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Returns false on failure
  int jo_write_jpg(
    ffi.Pointer<ffi.Char> filename,
    ffi.Pointer<ffi.Char> data,
    int width,
    int height,
    int comp,
    int quality,
  ) {
    return _jo_write_jpg(
      filename,
      data,
      width,
      height,
      comp,
      quality,
    );
  }

  late final _jo_write_jpgPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Int, ffi.Int, ffi.Int, ffi.Int)>>('jo_write_jpg');
  late final _jo_write_jpg = _jo_write_jpgPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int, int, int, int)>();

  /// Encodes JPEG to memory buffer. Returns result with data pointer and size.
  /// On failure, result.data will be NULL and result.size will be 0.
  /// Caller MUST call jo_free_buffer(result.data) when done.
  ///
  /// subsample_mode: JO_SUBSAMPLE_AUTO (-1), JO_SUBSAMPLE_444 (0), or JO_SUBSAMPLE_420 (1)
  JpegEncodeResult jo_encode_jpg_to_mem(
    ffi.Pointer<ffi.Char> data,
    int width,
    int height,
    int comp,
    int quality,
    int subsample_mode,
  ) {
    return _jo_encode_jpg_to_mem(
      data,
      width,
      height,
      comp,
      quality,
      subsample_mode,
    );
  }

  late final _jo_encode_jpg_to_memPtr = _lookup<
      ffi.NativeFunction<
          JpegEncodeResult Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int,
              ffi.Int, ffi.Int, ffi.Int)>>('jo_encode_jpg_to_mem');
  late final _jo_encode_jpg_to_mem = _jo_encode_jpg_to_memPtr.asFunction<
      JpegEncodeResult Function(
          ffi.Pointer<ffi.Char>, int, int, int, int, int)>();

  /// Frees a buffer allocated by jo_encode_jpg_to_mem
  void jo_free_buffer(
    ffi.Pointer<ffi.UnsignedChar> buffer,
  ) {
    return _jo_free_buffer(
      buffer,
    );
  }

  late final _jo_free_bufferPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.UnsignedChar>)>>(
      'jo_free_buffer');
  late final _jo_free_buffer = _jo_free_bufferPtr
      .asFunction<void Function(ffi.Pointer<ffi.UnsignedChar>)>();
}

/// Memory buffer result structure
final class JpegEncodeResult extends ffi.Struct {
  /// Pointer to JPEG data (caller must free with jo_free_buffer)
  external ffi.Pointer<ffi.UnsignedChar> data;

  /// Size of the JPEG data in bytes
  @ffi.Size()
  external int size;
}

const int JO_SUBSAMPLE_AUTO = -1;

const int JO_SUBSAMPLE_444 = 0;

const int JO_SUBSAMPLE_420 = 1;
